# salic-api

./: .codeclimate.yml  .coveragerc  .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  README.md  README.rst  docker-compose.yml  fabfile.py  install.sh  requirements.txt  setup.cfg  setup.py  startup-script  swagger_specification_PT-BR.json  swagger_specification_PT-BR.yaml  tasks.py  tox.ini
docker/: Dockerfile  Dockerfile_nginx  nginx.conf  nginx_salic_config
docs/: Makefile  api-connector.rst  api-fixtures.rst  api-flask.rst  api-models.rst  api-resources.rst  api-utils.rst  apidoc.rst  changelog.rst  conf.py  index.rst  make.bat  overview.rst  roadmap.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
salic-api/: requirements.txt  run.py  urls.py
salic-api/database/connectors/: mssql_connector.py  sql_connector.py  sqlite_connector.py
salic-api/resources/: APIError.py  InputValidation.py  ModelsBase.py  ResourceBase.py  SharedModels.py  TestResource.py  format_utils.py  input_validation.py  sanitization.py  security.py  serialization.py
salic-api/resources/api_doc/: SwaggerDef.py
salic-api/resources/fornecedor/: Fornecedor_detail.py  Fornecedor_list.py  Produto.py  models.py
salic-api/resources/incentivador/: Doacao.py  Incentivador_detail.py  Incentivador_list.py  models.py
salic-api/resources/preprojeto/: PreProjeto_detail.py  PreProjeto_list.py  models.py
salic-api/resources/projeto/: Area.py  Captacao.py  Projeto_detail.py  Projeto_list.py  Segmento.py  brand_attachment.py  file_attachment.py  models.py
salic-api/resources/proponente/: Proponente_detail.py  Proponente_list.py  models.py
salic-api/tests/: salic_api_client.py
salic-api/utils/: Log.py  Timer.py
salic_api/: connector.py  fixtures.py  run.py  urls.py  utils.py
salic_api/app/: __init__.py  default.py  development.cfg  example_config.py  general_config.py  rate_limiting.py  security.py  urls.py
salic_api/database/: __init__.py  connector.py  mssql_connector.py  mssql_connector.py.bak  sqlite_connector.py
salic_api/fixtures/: __init__.py  agentes.py  base.py  bdcorporativo.py  fake.py  fixtures.py  sac.py  tabelas.py
salic_api/models/: __init__.py  agentes.py  base.py  bdcorporativo.py  fake.py  sac.py  tabelas.py
salic_api/resources/: __init__.py  api_error.py  caching.py  format_utils.py  input_validation.py  model_base.py  query.py  rate_limiting.py  resource.py  resource_base.py  sanitization.py  security.py  serialization.py  shared_models.py  test_resource.py
salic_api/resources/api_doc/: SwaggerDef.py  swagger_def.py
salic_api/resources/fornecedor/: fornecedor_detail.py  fornecedor_list.py  models.py  produto.py  query.py  sql1.txt  sql2.txt  sql3.txt  sql4.txt
salic_api/resources/incentivador/: doacao.py  incentivador_detail.py  incentivador_list.py  models.py  query.py
salic_api/resources/preprojeto/: models.py  pre_projeto_detail.py  pre_projeto_list.py  query.py
salic_api/resources/projeto/: area.py  captacao.py  models.py  projeto_detail.py  projeto_list.py  (+4 more)
salic_api/static/: index.html  swagger-ui.css
salic_api/utils/: log.py  strings.py  timer.py
tests/: conftest.py  examples.py  salic_api_client.py  test_csv.py  test_examples.py  test_external.py  test_fornecedor.py  test_incentivador.py  test_inner_functions.py  test_projeto.py  test_proponente.py  test_proposta.py  test_utils.py
(+4 files in other folders)
