[metadata]
name = salic-api
version = attr: salic_api.__version__
description = A Flask-based API for Salic
long_description = file: README.md

author = MinC
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/salic-api

keywords =
    webdevelop
    rest
    api
license = GNU General Public License (GPL)
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries


[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    Flask==0.10.1
    Flask-Cors==2.1.2
    Flask-Inputs==0.2.0
    Flask-Limiter==0.9.3
    Flask-RESTful==0.3.5
    Jinja2==2.8
    MarkupSafe==0.23
    SQLAlchemy==1.0.12
    WTForms==2.1
    Werkzeug==0.11.9
    aniso8601==1.1.0
    argparse==1.2.1
    backports-abc==0.4
    backports.ssl-match-hostname==3.5.0.1
    certifi==2016.2.28
    dicttoxml==1.6.6
    flask-jsontools==0.1.1-0
    itsdangerous==0.24
    jsonschema==2.5.1
    limits==1.1.1
    python-dateutil==2.5.3
    pytz==2016.4
    singledispatch==3.4.0.3
    six==1.10.0
    Flask-Cache
    redis
    pycrypto

setup_requires =
    setuptools >= 30.3.0


[options.entry_points]
console_scripts =
    salic-api = salic_api.__main__:main


[options.extras_require]
dev =
    manuel
    pytest
    pytest-cov
    coverage
    mock
    docutils
    sphinx-autobuild


[egg_info]
tag_build = 0
tag_date = 0
tag_svn_revision = 0
