[metadata]
name = salic-api
version = attr: salic_api.__version__
description = A Flask-based API for Salic
long_description = file: README.md

author = MinC
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/salic-api

keywords =
    webdevelop
    rest
    api
license = GNU General Public License (GPL)
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries


[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    # Basic flask deps
    Flask>=0.12.1
    Flask-Cache
    Flask-Cors
    Flask-Inputs
    Flask-Limiter
    Flask-RESTful
    flask-jsontools
    Jinja2
    MarkupSafe
    Werkzeug
    requests

    # Db deps
    SQLAlchemy

    # Other
    pycpfcnpj>=1.4
    WTForms
    aniso8601==1.1.0
    argparse==1.2.1
    backports.ssl-match-hostname==3.5.0.1
    dicttoxml==1.6.6
    itsdangerous==0.24
    jsonschema==2.5.1
    limits==1.1.1
    python-dateutil==2.5.3
    pytz==2016.4
    six==1.10.0
    redis
    pycrypto
    # htmllaundry

setup_requires =
    setuptools >= 30.3.0


[options.entry_points]
console_scripts =
    salic-api = salic_api.__main__:main


[options.extras_require]
dev =
    coverage
    docutils
    invoke
    manuel
    mock
    pytest
    pytest-cov
    pytest-flask
    sphinx-autobuild

mssql =
    pymssql


[egg_info]
tag_build = 0
tag_date = 0
tag_svn_revision = 0
